## file_operations.py

import os
import logging
from typing import Optional
from googleapiclient.discovery import build
from googleapiclient.http import MediaFileUpload, MediaIoBaseDownload
from pydrive.auth import GoogleAuth
from pydrive.drive import GoogleDrive

# Import the logger instance from logger.py
from logger import logger

class FileOperations:
    """Class for handling file uploads, downloads, and conversions."""

    def __init__(self) -> None:
        """Initializes the FileOperations class."""
        self.gauth = GoogleAuth()
        self.drive = self._authenticate_drive()

    def _authenticate_drive(self) -> GoogleDrive:
        """Authenticates and creates a Google Drive instance.

        Returns:
            GoogleDrive: Authenticated Google Drive instance.
        """
        try:
            self.gauth.LocalWebserverAuth()  # Creates a local webserver for authentication
            logger.log_info("Google Drive authentication successful.")
            return GoogleDrive(self.gauth)
        except Exception as e:
            logger.log_error(f"Google Drive authentication failed: {e}")
            raise

    def upload_file(self, file: str) -> bool:
        """Uploads a file to Google Drive.

        Args:
            file (str): The path to the file to upload.

        Returns:
            bool: True if upload is successful, False otherwise.
        """
        try:
            file_metadata = {'title': os.path.basename(file)}
            media = MediaFileUpload(file, resumable=True)
            uploaded_file = self.drive.CreateFile(file_metadata)
            uploaded_file.SetContentMedia(media)
            uploaded_file.Upload()
            logger.log_info(f"File uploaded successfully: {file}")
            return True
        except Exception as e:
            logger.log_error(f"Failed to upload file {file}: {e}")
            return False

    def download_file(self, file_id: str, destination: str) -> bool:
        """Downloads a file from Google Drive.

        Args:
            file_id (str): The ID of the file to download.
            destination (str): The path where the file will be saved.

        Returns:
            bool: True if download is successful, False otherwise.
        """
        try:
            downloaded_file = self.drive.CreateFile({'id': file_id})
            with open(destination, 'wb') as f:
                downloader = MediaIoBaseDownload(f, downloaded_file.GetContentMedia())
                done = False
                while done is False:
                    status, done = downloader.Next_chunk()
                    logger.log_info(f"Download progress: {int(status.progress() * 100)}%")
            logger.log_info(f"File downloaded successfully: {destination}")
            return True
        except Exception as e:
            logger.log_error(f"Failed to download file {file_id}: {e}")
            return False

    def convert_file(self, input_file: str, output_format: str) -> bool:
        """Converts a file to a specified format.

        Args:
            input_file (str): The path to the input file.
            output_format (str): The desired output format.

        Returns:
            bool: True if conversion is successful, False otherwise.
        """
        try:
            # Placeholder for conversion logic
            logger.log_info(f"Converting file {input_file} to {output_format}.")
            # Implement actual conversion logic here
            logger.log_info(f"File converted successfully: {input_file} to {output_format}.")
            return True
        except Exception as e:
            logger.log_error(f"Failed to convert file {input_file}: {e}")
            return False
