## model_management.py

import logging
from transformers import AutoModel, AutoTokenizer
from typing import Optional

# Import the logger instance from logger.py
from logger import logger

class ModelManagement:
    """Class for loading and managing models from HuggingFace and CivitAI."""

    def __init__(self, model_name: str = "bert-base-uncased") -> None:
        """
        Initializes the ModelManagement class with a specified model.

        Args:
            model_name (str): The name of the model to load. Defaults to "bert-base-uncased".
        """
        self.model_name = model_name
        self.model = self.load_model(self.model_name)

    def load_model(self, model_name: str) -> Optional[AutoModel]:
        """
        Loads a model from HuggingFace Transformers.

        Args:
            model_name (str): The name of the model to load.

        Returns:
            AutoModel: The loaded model instance.
        """
        try:
            logger.log_info(f"Loading model: {model_name}")
            model = AutoModel.from_pretrained(model_name)
            logger.log_info(f"Model loaded successfully: {model_name}")
            return model
        except Exception as e:
            logger.log_error(f"Failed to load model {model_name}: {e}")
            return None

    def manage_model(self, model_id: str) -> bool:
        """
        Manages a model by its ID (e.g., for CivitAI).

        Args:
            model_id (str): The ID of the model to manage.

        Returns:
            bool: True if management is successful, False otherwise.
        """
        try:
            # Placeholder for model management logic
            logger.log_info(f"Managing model with ID: {model_id}")
            # Implement actual management logic here
            logger.log_info(f"Model management successful for ID: {model_id}")
            return True
        except Exception as e:
            logger.log_error(f"Failed to manage model {model_id}: {e}")
            return False
